QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
------------------------------------------------------

ChangeLog


0.6.3  2020-07-31  A Summer'20 Release.

- Early fixing to build for Qt >= 5.15.0.


0.6.2  2020-03-24  A Spring'20 Release.

- A scalable (.svg) icon version has been added.

- Make man page compression reproducible (after request
  by Jelle van der Waa, while on the Vee-Ones, thanks).

- Bumped copyright headers into the New Year (2020).


0.6.1  2019-12-22  The Winter'19 Release.

- Second attempt to fix the yet non-official though
  CMake build configuration.

- Provide a default IPv6 address, and feedback to the user
  in the options dialog (after a merge request by plcl aka.
  Pedro López-Cabanillas, thanks).

- When using ./configure --with-qt=... it is also necessary
  to adjust the PKG_CONFIG_PATH environment variable (also
  by plcl aka. Pedro López-Cabanillas).


0.6.0  2019-10-17  An Autumn'19 Release.

- Populate automatically the network interface combo-box
  with detected interface names (after merge request by
  plcl aka. Pedro López-Cabanillas, thanks).

- Complete rewrite of all the basic network interface code,
  while using the Qt5 framework as far as needed to support
  IPv4 and IPv6 seamless and interchangeably.

- Added alternate yet non-official CMake build option.

- Fix HiDPI display screen effective support (Qt >= 5.6).

- Make sure compiler flags comply to c++11 as standard.


0.5.5  2019-07-12  A Summer'19 Release.

- Configure updated to check for qtchooser availability.

- Minor update to Debian packaging control file.


0.5.4  2019-04-11  A Spring-Break'19 Release.

- Fix build on linux with musl (according to POSIX.1-2001,
  POSIX.1-2008; PR#7 by Andreas Müller aka. schnitzeltony,
  thanks).


0.5.3  2019-03-11  Pre-LAC2019 release frenzy.

- HiDPI display screen support (Qt >= 5.6).

- Old deprecated Qt4 build support is no more.


0.5.2  2018-07-22  A Summer'18 release.
