@@ -4,6 +4,12 @@ QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
 ChangeLog
 
 
+GIT HEAD
+
+- Early fixing to build for Qt >= 6.0.0 and comply
+  with c++17 standard.
+
+
 0.6.3  2020-07-31  A Summer'20 Release.
 
 - Early fixing to build for Qt >= 5.15.0.
